[package]
name = "evmole"
version = "0.8.1"
edition = "2024"
description = "Extracts function selectors and arguments from EVM bytecode"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/evmole"
exclude = ["/javascript", "/python", "/benchmark", "/.github"]

[dependencies]
alloy-primitives = { version = "1", default-features = false, features = [
    "std",
    "map-foldhash",
] }
alloy-dyn-abi = { version = "1", default-features = false }
indexmap = "2.12"

pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
python = ["dep:pyo3"]
javascript = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "serde"]

# for dev
trace_selectors = []
trace_arguments = []
trace_mutability = []
trace_storage = []
trace = [
    "trace_selectors",
    "trace_arguments",
    "trace_mutability",
    "trace_storage",
]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
