[package]
name = "evmole"
version = "0.8.2"
edition = "2024"
description = "Extracts function selectors and arguments from EVM bytecode"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/evmole"
exclude = ["/javascript", "/python", "/benchmark", "/.github"]

[dependencies]
alloy-primitives = { version = "1", default-features = false, features = [
    "std",
    "map-foldhash",
] }
alloy-dyn-abi = { version = "1", default-features = false }
indexmap = "2.12"

pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
serde = ["dep:serde"]
python = ["dep:pyo3"]
javascript = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "serde"]
wasm = ["serde", "dep:serde_json"]

# for dev
trace_selectors = []
trace_arguments = []
trace_mutability = []
trace_storage = []
trace = [
    "trace_selectors",
    "trace_arguments",
    "trace_mutability",
    "trace_storage",
]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
