[tool.poetry]
name = "evmole"
version = "0.3.0"
description = "Extracts function selectors and arguments from EVM bytecode"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/evmole"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {version = "^3.9.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
ruff = "^0.1.6"

[tool.poetry.extras]
benchmark = ["aiohttp"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["B", "Q", "I"]
line-length = 130
target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
