[tool.poetry]
name = "evmole-benchmarks"
version = "0.0.1"
description = "EVMole benchmarks"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cdump/evmole"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
mypy = "^1.10"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
