[package]
name = "evmole"
version = "0.3.4"
edition = "2021"
description = "Extracts function selectors and arguments from EVM bytecode"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/evmole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = "1.11.1"

[dev-dependencies]
hex = "0.4.3"
