[package]
name = "evmole"
version = "0.3.6"
edition = "2021"
description = "Extracts function selectors and arguments from EVM bytecode"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/evmole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = {version = "0.1", features = ["full"]}
itertools = "0.13.0"
log = "0.4.22"
ruint = {version = "1.0"}

[dev-dependencies]
hex = "0.4.3"

[features]
# for dev
trace = []
