[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heimdall-core = { git = "https://github.com/Jon-Becker/heimdall-rs.git", tag = "0.7.3" }
#heimdall-core = { git = "https://github.com/Jon-Becker/heimdall-rs.git", branch = "main" }
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
