[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
clap = { version = "4.5.1", features = ["derive"] }

storage-layout-extractor = { git = "https://github.com/smlxl/storage-layout-extractor", branch = "main" }
